--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="stars-background"></div>
     <div class="container">
         <div class="wizard-area">
             <pre id="wizard-ascii">
