--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="stars-background"></div>
+    <div class="vibrational-symbols"></div>
     <div class="container">
         <div class="wizard-area">
             <pre id="wizard-ascii">
