--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Wizard CHAT</title>
     <link href="https://fonts.googleapis.com/css2?family=Doto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KCFCFB8T2L"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-KCFCFB8T2L');
+    </script>
 </head>
 <body>
     <div class="stars-background"></div>
