--- a/index.html
+++ b/index.html
@@ -76,7 +76,19 @@
     <div class="astrological-wheel"></div>
     <div class="vibrational-symbols"></div>
     <div class="container">
-        <div class="title-area">
+        <div class="header-row">
+            <pre id="wizard-ascii">
+         ,/   *
+      _,'/_   |
+      `(")' ,'/
+   _ _,-H-./ /
+   \_\_\.   /
+     )" |  (
+  __/   H   \__
+  \    /|\    /
+   `--'|||`--'
+      ==^==
+            </pre>
             <pre id="wizard-title-ascii">
 8b      db      d8 88 888888888 ,adPPYYba, 8b,dPPYba,  ,adPPYb,88  
 `8b    d88b    d8' 88      a8P" ""     `Y8 88P'   "Y8 a8"    `Y88  
@@ -91,19 +103,7 @@ a8"     "" 88       88 ""     `Y8      a8P"
  `"Ybbd8"' 88       88 `"8bbdP"Y8 888888888  
             </pre>
         </div>
-        <div class="wizard-area">
-            <pre id="wizard-ascii">
-         ,/   *
-      _,'/_   |
-      `(")' ,'/
-   _ _,-H-./ /
-   \_\_\.   /
-     )" |  (
-  __/   H   \__
-  \    /|\    /
-   `--'|||`--'
-      ==^==
-            </pre>
+        <div class="speech-area">
             <div id="wizard-speech-bubble" class="wizard-speech"></div>
         </div>
         <div class="chat-controls">
