--- a/index.html
+++ b/index.html
@@ -89,19 +89,16 @@
    `--'|||`--'
       ==^==
             </pre>
-            <pre id="wizard-title-ascii">
+            <div id="wizard-title-text">
+                <div class="wizard-ascii-title">
 8b      db      d8 88 888888888 ,adPPYYba, 8b,dPPYba,  ,adPPYb,88  
 `8b    d88b    d8' 88      a8P" ""     `Y8 88P'   "Y8 a8"    `Y88  
  `8b  d8'`8b  d8'  88   ,d8P'   ,adPPPPP88 88         8b       88  
   `8bd8'  `8bd8'   88 ,d8"      88,    ,88 88         "8a,   ,d88  
     YP      YP     88 888888888 `"8bbdP"Y8 88          `"8bbdP"Y8   
-
- ,adPPYba, 88       88 ,adPPYYba, 888888888  
-a8"     "" 88       88 ""     `Y8      a8P"  
-8b         88aaaaaaaa88 ,adPPPPP88   ,d8P'   
-"8a,   ,aa 88"""""""88 88,    ,88 ,d8"      
- `"Ybbd8"' 88       88 `"8bbdP"Y8 888888888  
-            </pre>
+                </div>
+                <div class="chat-title">CHAT</div>
+            </div>
         </div>
         <div class="speech-area">
             <div id="wizard-speech-bubble" class="wizard-speech"></div>
