--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         "offers": {
             "@type": "Offer",
             "price": "0",
-            "priceCurrency": "USD"
+            "priceCurrency": "CAD"
         },
         "author": {
             "@type": "Organization",
