--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
             </pre>
             <div id="wizard-title-text">
                 <div class="wizard-ascii-title">
-        88      88                           88            88    88  
-        88      88                           88            88    88  
-8b      db      d8 88 888888888 ,adPPYYba, 8b,dPPYba,  ,adPPYb,88  
+✨      88      88                                             ✨  
+88      88      88                                             88  
+8b      db      d8 ✨ 888888888 ,adPPYYba, 8b,dPPYba,  ,adPPYb,88  
 `8b    d88b    d8' 88      a8P" ""     `Y8 88P'   "Y8 a8"    `Y88  
  `8b  d8'`8b  d8'  88   ,d8P'   ,adPPPPP88 88         8b       88  
   `8bd8'  `8bd8'   88 ,d8"      88,    ,88 88         "8a,   ,d88  
