--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         "@type": "WebApplication",
         "name": "WizardCHAT",
         "description": "Mystical AI wizard chat simulator with magical advice, wizard memes, and enchanted responses",
-        "url": "https://wizardchat.netlify.app",
+        "url": "https://wizardchat.lancesmith.cc",
         "applicationCategory": "Entertainment",
         "operatingSystem": "Any",
         "offers": {
@@ -106,7 +106,7 @@
             <div id="wizard-speech-bubble" class="wizard-speech"></div>
         </div>
         <div class="chat-controls">
-            <button id="mic-button">
+            <button id="mic-button" title="click here to activate the microphone - click again when you're finsihed speaking.">
                 <svg fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24px" height="24px"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" d="M21,14 L19,14 L19,10 L21,10 L21,14 Z M17,16 L15,16 L15,8 L17,8 L17,16 Z M13,19 L11,19 L11,5 L13,5 L13,19 Z M9,16 L7,16 L7,8 L9,8 L9,16 Z M5,14 L3,14 L3,10 L5,10 L5,14 Z"></path> </g></svg>
             </button>
             <textarea id="chat-input" placeholder="Speak or type thy query..."></textarea>
