--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
             <label for="response-length-slider" class="response-length-label">Mystical Depth:</label>
             <div class="slider-container">
                 <span class="slider-label">Cryptic</span>
-                <input type="range" id="response-length-slider" min="1" max="4" value="2" step="1" class="mystical-slider">
-                <span class="slider-label">Profound</span>
+                <input type="range" id="response-length-slider" min="1" max="6" value="2" step="1" class="mystical-slider">
+                <span class="slider-label">Legendary</span>
             </div>
             <div class="length-indicator" id="length-indicator">Moderate Wisdom</div>
         </div>
