--- a/index.html
+++ b/index.html
@@ -125,6 +125,21 @@
             <!-- Chat messages will appear here -->
         </div>
     </div>
+    
+    <!-- Wizard Meme Modal -->
+    <div id="wizard-meme-modal" class="wizard-meme-modal">
+        <div class="wizard-meme-content">
+            <button id="wizard-meme-close" class="wizard-meme-close" aria-label="Close meme">&times;</button>
+            <div class="wizard-meme-header">
+                <h3 class="wizard-meme-title">Mystical Wisdom Meme</h3>
+                <p class="wizard-meme-subtitle">✨ A gift from the meme archives ✨</p>
+            </div>
+            <div id="wizard-meme-container">
+                <!-- Meme content will be loaded here -->
+            </div>
+        </div>
+    </div>
+    
     <!-- LOCAL SCRIPT - CRITICAL: Must be loaded after FAL SDK and after DOM elements are defined -->
     <script src="script.js"></script>
 </body>
